<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:ignore="Autofill, ContentDescription" >

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/define_dimen_12"
        android:src="@drawable/ic_back"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/define_dimen_16"
        android:layout_marginEnd="@dimen/define_dimen_16"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/define_dimen_12"
        app:cardElevation="@dimen/define_dimen_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/surfaceBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_xnormal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:text="@string/user_role"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <RadioGroup
            android:id="@+id/rg_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdb_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/user" />

            <RadioButton
                android:id="@+id/rdb_shipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/shipper" />

            <RadioButton
                android:id="@+id/rdb_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/admin" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:background="@drawable/bg_main_corner_8"
            android:text="@string/sign_up_user"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <Button
            android:id="@+id/btn_sign_up_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@drawable/bg_white_corner_6_border_gray"
            android:text="@string/sign_up_google"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:text="@string/sign_in"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</RelativeLayout>